# Teonite-Test-Task

./: Cargo.toml  Dockerfile  Dockerfile1.txt  Dockerfile2.txt  Dockerfile3.txt  Dockerfile4.txt  Dockerfile5.txt
src/: main.rs
