[package]
name = "stage_one"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.12", features = ["blocking"] }
rust_decimal = { version = "1.34", features = ["serde-with-float"] }
rusty-money = { version = "0.4.1", features = ["iso", "crypto"] }
serde = {version = "1.0.197", features = ["derive"]}
serde_json = "1.0"